# qliff

./: .gitignore  404.html  Cargo.toml  LICENSE  MANIFEST.in  README.md  RELEASING.md  api.html  circuit.html  do  eastwood.toml  getting-started.html  hashmap.json  index.html  noise.html  observables.html  pyproject.toml  qec.html  setup.py  slides.tex
aaronson/: __init__.py  circuit.py  metrics.py  pauli.py  simulator.py
assets/: api.md.BMGq6JTf.js  api.md.BMGq6JTf.lean.js  app.D7_SgxQn.js  app.aAHzGDD3.js  circuit.md.DfpP3NWH.js  circuit.md.DfpP3NWH.lean.js  examples_circuits.md.BQ_Kxaqi.js  examples_circuits.md.BQ_Kxaqi.lean.js  examples_index.md.Clai0IIp.js  examples_index.md.Clai0IIp.lean.js  examples_noise.md.C4uFgXLA.js  examples_noise.md.C4uFgXLA.lean.js  examples_qec.md.Ba6ixVfC.js  examples_qec.md.Ba6ixVfC.lean.js  getting-started.md.BXwd-x9d.js  getting-started.md.BXwd-x9d.lean.js  index.md.R8r5eA_a.js  noise.md.BJy8wARX.js  noise.md.BJy8wARX.lean.js  observables.md.CjOU6RWM.js  observables.md.CjOU6RWM.lean.js  qec.md.CT-gWnce.js  qec.md.CT-gWnce.lean.js  style.B5rvImOe.css  style.Ch0ok8Q7.css  tests_amplitude.md.Bac25M7v.js  tests_amplitude.md.Bac25M7v.lean.js  tests_circuit.md.CaCKGERz.js  tests_circuit.md.CaCKGERz.lean.js  tests_codes.md.D4h80tkE.js  tests_codes.md.D4h80tkE.lean.js  tests_coherent.md.DGusOR-B.js  tests_coherent.md.DGusOR-B.lean.js  tests_dem.md.DHq5t3zn.js  tests_dem.md.DHq5t3zn.lean.js  tests_expectation.md.h6VDWQ-8.js  tests_expectation.md.h6VDWQ-8.lean.js  tests_index.md.DmschZZg.js  tests_index.md.DmschZZg.lean.js  tests_measure.md.CEuQu5gu.js  (+49 more)
ci/: cargo-xwin.sh  smoke.py
docs/: .gitignore  api.md  circuit.md  getting-started.md  index.md  noise.md  observables.md  package-lock.json  package.json  qec.md  studio.md  svelte.config.js  tsconfig.json
examples/: circuits.html  index.html  noise.html  qec.html
figs/: README.txt
qliff/: __init__.py  __main__.py  _types.py  circuit.py  metrics.py  pauli.py  simulator.py
src/: lib.rs  tableau.rs
studio/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
test/: MDR.py  amplitude.py  circuit.py  codes.py  coherent.py  color.py  core.py  dem.py  expectation.py  lattice.py  measure.py  noise.py  pauli.py  qec.py  smoke.py  standard.py  stratified.py  tableau.py  tn.py
tests/: amplitude.html  circuit.html  codes.html  coherent.html  dem.html  expectation.html  index.html  measure.html  noise.html  pauli.html  qec.html  smoke.html  standard.html  stratified.html  tableau.html
tutorials/: bp.html  coherent.html  gates.html  ler.html  mwpm.html  noise.html  tn.html  (+3 more)
(+207 files in other folders)
