[package]
name = "aaronson"
version = "0.1.0"
edition = "2021"
description = "Clifford + noisy stabilizer simulator (native core)"
license = "MIT"
repository = "https://github.com/plutoniumm/aaronson"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
