[package]
name = "qliff"
version = "0.2.1"
edition = "2021"
description = "Clifford + noisy stabilizer simulator (native core)"
license = "MIT"
repository = "https://github.com/plutoniumm/qliff"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = [
  "extension-module",
  "abi3-py311",
  # synthesize the python3.dll import lib when cross-compiling to Windows,
  # so no Windows Python needs to be present on the build machine.
  "generate-import-lib",
] }
rayon = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
